more fixes due to animal sniffer