@@ -6,6 +6,7 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -47,7 +48,7 @@ public class RootTrustBase {
     this.networkId = networkId;
     this.epoch = epoch;
     this.epochStartRound = epochStartRound;
-    this.rootNodes = Set.copyOf(rootNodes);
+    this.rootNodes = Collections.unmodifiableSet(new HashSet<>(rootNodes));
     this.quorumThreshold = quorumThreshold;
     this.stateHash = Arrays.copyOf(stateHash, stateHash.length);
     this.changeRecordHash = changeRecordHash == null
