@@ -6,6 +6,7 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -122,7 +123,7 @@ public class TransferTransaction extends Transaction<TransferTransaction.Data> {
       this.salt = Arrays.copyOf(salt, salt.length);
       this.recipientDataHash = recipientDataHash;
       this.message = message != null ? Arrays.copyOf(message, message.length) : null;
-      this.nametags = List.copyOf(nametags);
+      this.nametags = Collections.unmodifiableList(new ArrayList<>(nametags));
     }
 
     /**
